debug/program.txt
program.cc: In function ‘int main()’:
program.cc:37:34: error: ‘class ProblemCollection’ has no member named ‘containsElement’
   37 |             if(problemCollection.containsElement(newProblemID)) error();
      |                                  ^~~~~~~~~~~~~~~
program.cc:39:32: error: ‘class ProblemCollection’ has no member named ‘addElement’
   39 |              problemCollection.addElement(newProblemID, Problem());
      |                                ^~~~~~~~~~
program.cc:40:40: error: ‘class ProblemCollection’ has no member named ‘getCount’
   40 |              cout << problemCollection.getCount() << endl;
      |                                        ^~~~~~~~
program.cc:46:34: error: ‘class SessionRepository’ has no member named ‘containsElement’
   46 |             if(sessionRepository.containsElement(newSessionID)) error();
      |                                  ^~~~~~~~~~~~~~~
program.cc:49:32: error: ‘class SessionRepository’ has no member named ‘addElement’
   49 |              sessionRepository.addElement(newSessionID, newSession);
      |                                ^~~~~~~~~~
program.cc:50:40: error: ‘class SessionRepository’ has no member named ‘getCount’
   50 |              cout << sessionRepository.getCount() << endl;
      |                                        ^~~~~~~~
program.cc:55:29: error: ‘newCourseID’ was not declared in this scope; did you mean ‘newCourse’?
   55 |    Course newCourse; cin >> newCourseID;
      |                             ^~~~~~~~~~~
      |                             newCourse
program.cc:56:26: error: ‘class CourseSet’ has no member named ‘containsElement’
   56 |             if(courseSet.containsElement(newCourseID)) error();
      |                          ^~~~~~~~~~~~~~~
program.cc:60:25: error: ‘class CourseSet’ has no member named ‘addElement’
   60 |               courseSet.addElement(newCourseID, newCourse);
      |                         ^~~~~~~~~~
program.cc:61:33: error: ‘class CourseSet’ has no member named ‘getCount’
   61 |               cout << courseSet.getCount() << endl;
      |                                 ^~~~~~~~
program.cc:69:24: error: ‘class UserSet’ has no member named ‘containsElement’
   69 |             if(userSet.containsElement(newUserID)) error();
      |                        ^~~~~~~~~~~~~~~
program.cc:71:22: error: ‘class UserSet’ has no member named ‘addElement’
   71 |              userSet.addElement(newUserID, User());
      |                      ^~~~~~~~~~
program.cc:72:30: error: ‘class UserSet’ has no member named ‘getCount’
   72 |              cout << userSet.getCount() << endl;
      |                              ^~~~~~~~
program.cc:80:28: error: ‘class UserSet’ has no member named ‘containsElement’
   80 |             if(not userSet.containsElement(toRemoveUserID)) error();
      |                            ^~~~~~~~~~~~~~~
program.cc:82:22: error: ‘class UserSet’ has no member named ‘removeElement’
   82 |              userSet.removeElement(toRemoveUserID);
      |                      ^~~~~~~~~~~~~
program.cc:83:30: error: ‘class UserSet’ has no member named ‘getCount’
   83 |              cout << userSet.getCount() << endl;
      |                              ^~~~~~~~
program.cc:94:19: error: ‘class UserSet’ has no member named ‘containsElement’
   94 |    if(not userSet.containsElement(userID) or not courseSet.containsElement(courseID)) error();
      |                   ^~~~~~~~~~~~~~~
program.cc:94:60: error: ‘class CourseSet’ has no member named ‘containsElement’
   94 |    if(not userSet.containsElement(userID) or not courseSet.containsElement(courseID)) error();
      |                                                            ^~~~~~~~~~~~~~~
program.cc:111:15: error: ‘class UserSet’ has no member named ‘containsElement’
  111 |    if(userSet.containsElement(userID)) {
      |               ^~~~~~~~~~~~~~~
program.cc:126:17: error: ‘class CourseSet’ has no member named ‘containsElement’
  126 |    if(courseSet.containsElement(courseID) and problemCollection.containsElement(problemID)){
      |                 ^~~~~~~~~~~~~~~
program.cc:126:65: error: ‘class ProblemCollection’ has no member named ‘containsElement’
  126 |    if(courseSet.containsElement(courseID) and problemCollection.containsElement(problemID)){
      |                                                                 ^~~~~~~~~~~~~~~
program.cc:140:15: error: ‘class UserSet’ has no member named ‘containsElement’
  140 |    if(userSet.containsElement(userID)) userSet[userID].getSolvedStats().print();
      |               ^~~~~~~~~~~~~~~
program.cc:147:15: error: ‘class UserSet’ has no member named ‘containsElement’
  147 |    if(userSet.containsElement(userID)) userSet[userID].getSolvableStats().print();
      |               ^~~~~~~~~~~~~~~
program.cc:208:9: error: expected ‘}’ before ‘else’
  208 |         else assert(false);
      |         ^~~~
program.cc:204:40: note: to match this ‘{’
  204 |         else if(command == write_user) {
      |                                        ^
